--- a/Avto_deli.csproj
+++ b/Avto_deli.csproj
@@ -99,6 +99,15 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Database.cs" />
+    <Compile Include="Main_DB_Stran.xaml.cs">
+      <DependentUpon>Main_DB_Stran.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Main_Genericna_zbirka_Stran.xaml.cs">
+      <DependentUpon>Main_Genericna_zbirka_Stran.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Main_Verizni_Seznam_Stran.xaml.cs">
+      <DependentUpon>Main_Verizni_Seznam_Stran.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Razredi.cs" />
     <Compile Include="Register.xaml.cs">
       <DependentUpon>Register.xaml</DependentUpon>
@@ -115,6 +124,18 @@
       <DependentUpon>Login.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Main_DB_Stran.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Main_Genericna_zbirka_Stran.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Main_Verizni_Seznam_Stran.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Register.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -162,6 +183,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
